--- a/flask-cupcakes/requirements.txt
+++ b/flask-cupcakes/requirements.txt
@@ -1,33 +1,5 @@
-appnope==0.1.3
-asttokens==2.2.1
-backcall==0.2.0
-blinker==1.6.2
-click==8.1.7
-decorator==5.1.1
-executing==1.2.0
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-greenlet==2.0.2
-importlib-metadata==6.8.0
-ipython==8.14.0
-itsdangerous==2.1.2
-jedi==0.19.0
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-matplotlib-inline==0.1.6
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-prompt-toolkit==3.0.39
-psycopg2-binary==2.9.7
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.16.1
-six==1.16.0
-SQLAlchemy==2.0.20
-stack-data==0.6.2
-traitlets==5.9.0
-typing_extensions==4.7.1
-wcwidth==0.2.6
-Werkzeug==2.3.7
-zipp==3.16.2
+flask
+flask-sqlalchemy
+ipython
+psycopg2-binary
+sqlalchemy
