--- a/flask-cupcakes/requirements.txt
+++ b/flask-cupcakes/requirements.txt
@@ -1,45 +1,5 @@
-appdirs==1.4.3
-appnope==0.1.3
-asttokens==2.3.0
-attrs==19.3.0
-autopep8==1.5
-backcall==0.2.0
-black==19.10b0
-blinker==1.6.2
-Click==7.0
-decorator==5.1.1
-exceptiongroup==1.1.3
-executing==1.2.0
-Flask==1.1.1
-Flask-DebugToolbar==0.13.1
-Flask-SQLAlchemy==2.4.1
-greenlet==2.0.2
-importlib-metadata==6.8.0
-ipython==8.15.0
-itsdangerous==1.1.0
-jedi==0.19.0
-Jinja2==2.11.0
-MarkupSafe==1.1.1
-matplotlib-inline==0.1.6
-parso==0.8.3
-pathspec==0.7.0
-pexpect==4.8.0
-pickleshare==0.7.5
-prompt-toolkit==3.0.39
-psycopg2-binary==2.8.4
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycodestyle==2.5.0
-Pygments==2.16.1
-regex==2020.1.8
-six==1.16.0
-SQLAlchemy==1.3.13
-stack-data==0.6.2
-toml==0.10.0
-traitlets==5.9.0
-typed-ast==1.4.1
-typing_extensions==4.7.1
-wcwidth==0.2.6
-Werkzeug==0.16.1
-yapf==0.29.0
-zipp==3.16.2
+flask
+flask-sqlalchemy
+ipython
+psycopg2-binary
+sqlalchemy
