--- a/warbler/requirements.txt
+++ b/warbler/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.12.0
 appnope==0.1.0
 backcall==0.1.0
 bcrypt==4.0.1
@@ -7,6 +8,7 @@ decorator==4.3.0
 Faker==0.9.1
 Flask==2.3.3
 Flask-Bcrypt==1.0.1
+Flask-DB==0.3.2
 Flask-DebugToolbar==0.13.1
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.1.1
@@ -18,6 +20,7 @@ ipython-genutils==0.2.0
 itsdangerous==2.1.2
 jedi==0.13.1
 Jinja2==3.1.2
+Mako==1.2.4
 MarkupSafe==2.1.3
 packaging==23.1
 parso==0.3.1
@@ -32,6 +35,7 @@ python-dateutil==2.7.3
 simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==2.0.20
+SQLAlchemy-Utils==0.41.1
 text-unidecode==1.2
 traitlets==4.3.2
 typing_extensions==4.7.1
