--- a/warbler/requirements.txt
+++ b/warbler/requirements.txt
@@ -1,58 +1,36 @@
-appnope==0.1.3
-asttokens==2.2.1
-backcall==0.2.0
-bcrypt==4.0.1
-blinker==1.6.2
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.7
-decorator==5.1.1
-dnspython==2.4.2
-email-validator==2.0.0.post2
-executing==1.2.0
-filelock==3.12.2
-Flask==2.3.2
-Flask-Bcrypt==1.0.1
-Flask-DebugToolbar==0.13.1
-Flask-SQLAlchemy==3.0.5
-Flask-Uploads==0.2.1
-Flask-WTF==1.1.1
-forex-python==1.8
-greenlet==2.0.2
-gunicorn==21.2.0
-idna==3.4
-importlib-metadata==6.8.0
-ipython==8.14.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-matplotlib-inline==0.1.6
-mpmath==1.3.0
-networkx==3.1
-neuralart==1.1.1
-numpy==1.25.0
-packaging==23.1
-parso==0.8.3
-pexpect==4.8.0
+appnope==0.1.0
+backcall==0.1.0
+bcrypt==3.1.4
+blinker==1.4
+cffi==1.14.2
+Click==7.0
+decorator==4.3.0
+Faker==0.9.1
+Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-DebugToolbar==0.10.1
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+ipython==7.0.1
+ipython-genutils==0.2.0
+itsdangerous==0.24
+jedi==0.13.1
+Jinja2==2.10
+MarkupSafe==1.1.1
+parso==0.3.1
+pexpect==4.6.0
 pickleshare==0.7.5
-Pillow==10.0.0
-prompt-toolkit==3.0.39
-psycopg2-binary==2.9.7
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.15.1
-requests==2.31.0
-simplejson==3.19.1
-six==1.16.0
-SQLAlchemy==2.0.20
-stack-data==0.6.2
-sympy==1.12
-torch==2.0.1
-traitlets==5.9.0
-typing_extensions==4.7.1
-urllib3==2.0.4
-wcwidth==0.2.6
-Werkzeug==2.3.7
-WTForms==3.0.1
-zipp==3.16.2
+prompt-toolkit==2.0.5
+psycopg2-binary==2.8.4
+ptyprocess==0.6.0
+pycparser==2.19
+Pygments==2.2.0
+python-dateutil==2.7.3
+simplegeneric==0.8.1
+six==1.11.0
+SQLAlchemy==1.2.12
+text-unidecode==1.2
+traitlets==4.3.2
+wcwidth==0.1.7
+Werkzeug==0.14.1
+WTForms==2.2.1
