--- a/warbler/.env
+++ b/warbler/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://warbler_mclw_user:yFYAziTMKGtkHFuQxariIRkYsis0ZWmD@dpg-ck2898fqj8ts73fmvjs0-a.oregon-postgres.render.com/warbler_mclw
+DATABASE_URL=DATABASE_URL=postgresql://postgres://aajqncvi:odDCyEttO5JQwS8gSRwFxrq0QWQOvrEr@mahmud.db.elephantsql.com/aajqncvi
