--- a/warbler/.env
+++ b/warbler/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=DATABASE_URL=postgresql://postgres://aajqncvi:odDCyEttO5JQwS8gSRwFxrq0QWQOvrEr@mahmud.db.elephantsql.com/aajqncvi
+DATABASE_URL = postgres://aajqncvi:odDCyEttO5JQwS8gSRwFxrq0QWQOvrEr@mahmud.db.elephantsql.com/aajqncvi
