--- a/warbler/requirements.txt
+++ b/warbler/requirements.txt
@@ -11,12 +11,15 @@ Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gunicorn==21.2.0
+importlib-metadata==6.7.0
 ipython==7.0.1
 ipython-genutils==0.2.0
 itsdangerous==0.24
 jedi==0.13.1
 Jinja2==2.10
 MarkupSafe==1.1.1
+packaging==23.1
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.5
@@ -31,6 +34,8 @@ six==1.11.0
 SQLAlchemy==1.2.12
 text-unidecode==1.2
 traitlets==4.3.2
+typing-extensions==4.7.1
 wcwidth==0.1.7
 Werkzeug==0.14.1
 WTForms==2.2.1
+zipp==3.15.0
