--- a/node-files/package.json
+++ b/node-files/package.json
@@ -102,5 +102,8 @@
       "resolved": "https://registry.npmjs.org/proxy-from-env/-/proxy-from-env-1.1.0.tgz",
       "integrity": "sha512-D+zkORCbA9f1tdWRK0RaCR3GPv50cMxcrz4X8k5LTSUD1Dkw47mKJEZQNunItRTkWwgtaUSo1RVFRIG9ZXiFYg=="
     }
+  },
+  "dependencies": {
+    "jest": "^29.7.0"
   }
 }
