--- a/node-markov/package.json
+++ b/node-markov/package.json
@@ -1,7 +1,6 @@
 {
   "name": "markov",
   "version": "1.0.0",
-  "description": "",
   "main": "makeText.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +9,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1"
-  }
+  },
+  "description": ""
 }
