--- a/node-markov/package.json
+++ b/node-markov/package.json
@@ -8,7 +8,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.5.1"
+    "axios": "^1.5.1",
+    "fs": "^0.0.1-security",
+    "process": "^0.11.10"
   },
   "description": ""
 }
