--- a/node-markov/package.json
+++ b/node-markov/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "makeText.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -11,6 +11,9 @@
     "axios": "^1.5.1",
     "fs": "^0.0.1-security",
     "process": "^0.11.10"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   },
   "description": ""
 }
