--- a/34_express-calculator/package.json
+++ b/34_express-calculator/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.5.1",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "json": "^11.0.0",
+    "process": "^0.11.10"
   },
   "description": ""
 }
