--- a/express-shopping-list/package.json
+++ b/express-shopping-list/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tests": "supertest routes/items.tests.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "process": "^0.11.10"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "supertest": "^6.3.3"
   }
 }
