--- a/express-biztime/package.json
+++ b/express-biztime/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.0",
     "express": "^4.18.2",
     "pg": "^8.11.3",
+    "slugify": "^1.6.6",
     "supertest": "^6.3.3"
   }
 }
