--- a/websocket-groupchat/package.json
+++ b/websocket-groupchat/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.1",
     "express": "^4.16.4",
     "express-ws": "^4.0.0",
     "socket.io": "^2.1.1"
