--- a/react-cards-pokemon/package.json
+++ b/react-cards-pokemon/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "*",
     "@testing-library/user-event": "*",
     "axios": "*",
+    "console-browserify": "^1.2.0",
     "react": "*",
     "react-dom": "*",
     "react-scripts": "*",
