--- a/react-jobly/frontend/package.json
+++ b/react-jobly/frontend/package.json
@@ -14,8 +14,8 @@
     "reactstrap": "^6.5.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
