--- a/react-jobly/frontend/package.json
+++ b/react-jobly/frontend/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
-    "axios": "^0.19.2",
+    "axios": "^1.6.7",
     "bootstrap": "^4.6.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "2.0.5",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
