--- a/react-jobly/frontend/package.json
+++ b/react-jobly/frontend/package.json
@@ -19,8 +19,7 @@
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "surge": "REACT_APP_BASE_URL=https://r-jobly-13c42961008f.herokuapp.com npm run build && cp build/index.html build/200.html && surge build joelburton-jobly.surge.sh && echo https://r-jobly-13c42961008f.herokuapp.com"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
