--- a/react-jobly/frontend/package.json
+++ b/react-jobly/frontend/package.json
@@ -9,12 +9,12 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "2.0.5",
+    "react-scripts": "^2.1.8",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
