--- a/react-jobly/frontend/package.json
+++ b/react-jobly/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.6.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^4.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.1",
