--- a/poke-game/frontend/package.json
+++ b/poke-game/frontend/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "poke-game",
+  "name": "react-jobly",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^1.6.7",
     "bootstrap": "^4.6.1",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "react": "^17.0.2",
+    "react": "^16.14.0",
     "react-bootstrap-icons": "^1.10.3",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.4",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.9.0",
     "reactstrap": "^6.5.0"
