--- a/poke-game/frontend/package.json
+++ b/poke-game/frontend/package.json
@@ -10,6 +10,7 @@
     "react": "^16.14.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^16.14.0",
+    "react-jwt": "^1.2.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.9.0",
